--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.8",
     "antd": "^5.25.4",
+    "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
     "middleware": "^1.0.0",
     "react": "^19.1.0",
